<resources>
    <string name="app_name">SempraHub</string>
    <string name="error_sign_out">Fail to sign out</string>
    <string name="nav_drawer_open">Navigation drawer open</string>
    <string name="nav_drawer_close">Navigation drawer close</string>
    <string name="login">Login</string>
    <string name="password">Password</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_fragment_information">Information</string>
    <string name="user_fragment_repos">Repos</string>
    <string name="user_fragment_following">Following</string>
    <string name="user_fragment_followers">Followers</string>
    <string name="user_fragment_member_since">Member since:</string>
    <string name="description">Description: </string>
    <string name="no_description">No description for this repository</string>
    <string name="updated">Updated at: </string>
    <string name="watchers">Watchers</string>
    <string name="issues">Issues</string>
    <string name="forks">Forks</string>
    <string name="stars">Stars</string>
    <string name="my_news">My news</string>
    <string name="action_search">Search</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="def_value">light</string>
    <string name="pref_general_title_theme">Set Theme</string>
    <string-array name="pref_theme_titles">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>light</item>
        <item>dark</item>
    </string-array>

</resources>
